# rsm_test

./: .env.example  .env.template  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  environment.yml  langgraph.json  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl.tmp  .langgraph_checkpoint.2.pckl.tmp  .langgraph_checkpoint.3.pckl.tmp  .langgraph_ops.pckl
app/: ingest.py  main_test.py  query.py
code/: config.py  main.py  main_test.py  schemas.py  test.py
code/agents/: promts.py  query_graph.py
code/agents/agents_query/: agent_answer.py  agent_critic.py  agent_evaluator.py  agent_retriever.py  agent_rewriter.py
code/data/test4_chroma_db/: chroma.sqlite3
code/data/test5_chroma_db/: chroma.sqlite3
code/data/test6_chroma_db/: chroma.sqlite3
code/data/test_chroma_db/: chroma.sqlite3
code/data/test_chroma_db2/: chroma.sqlite3
code/database/: client_chroma.py  db.py
code/models/: ingest.py  query.py
code/models/agents/: api_test.py  promts.py
code/models/agents/nodes/: agent_query.py  node_embedding.py  (+6 more)
code/models/nodes_ingest/: chunker.py  embedder.py  scraper.py  store_chroma.py
code/models/nodes_query/: embedding.py  queries.py
code/notebooks/: choma3.ipynb  chroma.ipynb  chroma2.ipynb
code/routers/: api_test.py
code/templates/: index.html
code/utils/: observability.py  prompts.py  prompts_class.py  time.py
docs/: GenAI_TakeHome_Test (1) 1.md
nodes/: chunker.py  embedder.py  scraper.py  store_redis.py
notebooks/: config.py  test.ipynb
notebooks/vector_index/: index.faiss  index.pkl
